# kadanes

./: README.md  pyproject.toml
kadanes/: kadanes.py
python/kadanes/: LICENSE  requirements.txt
python/kadanes/kadanes/: __init__.py  __main__.py  main.py
tests/: test_kadanes.py
