[tool.poetry]
name = "kadanes"
version = "0.1.0"
description = ""
authors = ["Goutham Krishna K V <gauthamkrishna9991@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
